--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -7,7 +7,7 @@ spring:
   
  eureka:
    client:
-     server-url:
+     service-url:
        defaultZone: http://eureka-dev.com:7001/eureka/
 ---
 server:
@@ -19,5 +19,5 @@ spring:
   
  eureka:
    client:
-     server-url:
+     service-url:
        defaultZone: http://eureka-test.com:7001/eureka/
